--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "wagmi": "^2.15.6",
     "x402-axios": "^0.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0", "dotenv": "^17.2.0",
     "react-router-dom": "^6.23.1",
     "openai": "^4.52.7",
     "lucide-react": "^0.394.0",
