--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,13 +8,10 @@ on:
 
 jobs:
   build-and-push:
-    runs-on: registry.vistara.dev/zara-base:latest
+    runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
     
     - name: Build and push Docker image
       uses: docker/build-push-action@v5
